style.css
/* Declaring variables for the page's color scheme */

:root {
    --pink: #FFA07A;
    --green: #90EE90;
    --yellow: #FFFACD;
    --blue: #E0FFFF;
    --darkturq: #00CED1;
    --white: #FFFFFF;
    --black: #000000;
}

/* Styling for the main content and the border around it */

body {
    padding: 5%;
    background-color: var(--blue);
}

.content {
    background-color: var(--white);
    overflow: scroll;
    border: 1rem solid var(--green);
    border-radius: 5rem;
}

main {
    padding: 8rem;  
}

/* Set 1rem to 10px instead of 16px, and styling for headers/paragraph text */

html {
    font-size: 62.5%;
}

h1 {
    display: inline-block;
    font-size: 5rem;
    font-family: Garamond, 'Times New Roman', Times, serif;
}

h2 {
    color: var(--darkturq);
    font-family: Garamond, 'Times New Roman', Times, serif;
    font-size: 3.5rem;
    font-weight: bold;
    margin-bottom: 1rem;
}

p {
    font-size: 2rem;
    font-family: Arial, Helvetica, sans-serif;
    line-height: 2rem;
}

/* Styling for the header and navigation */

header {
    background-color: var(--darkturq);
    color: var(--white);
    padding: 5rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

nav {
    margin-right: 2rem;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 2rem;
    display: flex;
}

nav a {
    margin-left: 2.5rem;
    color: var(--white);
    border: 0.5rem solid var(--white);
    border-radius: 2rem;
    padding: 1.5rem;
    text-align: center;
}

/* Styling for the About Me section */

#portfolio-img {
    float: left;
    width: 40rem;
    height: 40rem;
    margin-bottom: 2rem;
    margin-right: 5rem;
    border: 1rem solid var(--darkturq);
    border-radius: 5rem;
}

/* Styling for the Completed Projects section */

#completed-projects {
    clear: both;
    margin-top: 5rem;
}

#completed-projects h2 {
    text-align: center;
}

.project-images {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
}
#large-square a {
    display: block;
    position: relative;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
}

#large-square {
    width: 80rem;
    height: 40rem;
    padding: 5rem;
    flex: 1 0 98%;
    margin: 1rem;
    position: relative;
    background-image: url("images/search-engine-optimization.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100%;
    border: 1.5em solid var(--darkturq);
}

#large-square:hover {
    background-color: var(--blue);
    opacity: 50%;
}

.square-title {
    padding: 2rem;
    margin-right: 10rem;
    position: absolute;
    top: 70%;
    left: 0%;
    background-color: var(--yellow);
}

.square {
    width: 33.333%;
    height: 40rem;
    background-color: var(--pink);
    padding: 2rem;
    flex: 1 0 40rem;
    margin: 1rem;
    position: relative;
}

.square:nth-child(3n) {
    background-color: var(--darkturq);
}

.square:nth-child(3n+1) {
    background-color: var(--green);
}

.square:hover {
    background-color: var(--blue);
}


/* Responsive Design styling */

@media screen and (max-width: 992px) {
    .square {
      width: 50%;
    }
}

@media screen and (max-width: 768px) {
    .square {
      width: 100%;
    }

    header h1, nav {
        flex-direction: column;
    }

    header {
        padding-bottom: 10rem;
        display: block;
        justify-content: center;
        text-align: center;
    }

    nav {
        order: 2;
        margin-top: 5rem;
    }

    nav a {
        margin: 1rem;
    }

    .image-wrapper {
        display: flex;
        justify-content: center;
        margin-left: 5rem;
    }

    #portfolio-img {
        flex-basis: 40rem;
    }

    #large-square {
        flex-basis: 40rem;
    }

    footer {
        flex-direction: column;
        margin-top: 1rem;
    }

    footer p {
        margin: 3rem;
    }
}

/* Styling for the footer */

footer {
    background-color: var(--darkturq);
    color: var(--white);
    padding: 5%;
    align-items: center;
    text-align: center;
    font-size: 5rem;
    display: flex;
    justify-content: center;
}

footer p {
    margin: 2rem;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 2.5rem; 
    border: 0.5rem solid var(--white);
    border-radius: 2rem;
    padding: 1.5rem;
    color: var(--white);
    line-height: 3rem;
}

